--- a/01.Numpy/02.Numpy-2.ipynb
+++ b/01.Numpy/02.Numpy-2.ipynb
@@ -868,58 +868,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "a= np.arange(1,7).reshape(2,3)\n",
     "b = np.arange(1,13).reshape(3,4)\n",
     "\n",
-    "# dot product는 (2x3)(3x4) 3/3 처럼 중간이 같아야 가능함 \n",
+    "# dot product는 행X열\n",
+    "# (2x3)(3x4)처럼 중간이 같아야 가능함 \n",
     "# 그래서 a.b 순서 바꾸면 안됨 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 2, 3],\n",
-       "       [4, 5, 6]])"
+       "(array([[1, 2, 3],\n",
+       "        [4, 5, 6]]),\n",
+       " array([[ 1,  2,  3,  4],\n",
+       "        [ 5,  6,  7,  8],\n",
+       "        [ 9, 10, 11, 12]]))"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a"
+    "a,b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1,  2,  3,  4],\n",
-       "       [ 5,  6,  7,  8],\n",
-       "       [ 9, 10, 11, 12]])"
+       "38"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "b"
+    "# a[0], b열[0]\n",
+    "1*1 + 2*5 + 3*9 \n",
+    "# a[0] * b열[0,1,2,3]\n",
+    "# a[1] * b열[0,1,2,3]"
    ]
   },
   {
@@ -1445,17 +1450,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 3.33556533, -0.51763868,  0.04524353,  0.2440766 ,  2.32276011,\n",
-       "        0.1154553 , -0.13606479, -0.59618747, -0.16261703,  0.42286056])"
+       "array([ 1.20751345,  1.6761094 ,  0.79595143, -0.24185281,  0.26386613,\n",
+       "        1.20331496,  0.58988406, -0.16308063,  0.72198668, -1.25489926])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1470,16 +1475,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.5073453455234702, 0.5073453455234702)"
+       "(0.4798793412405605, 0.4798793412405605)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1490,16 +1495,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.2193984663896897, 1.2193984663896897)"
+       "(0.8151569618228439, 0.8151569618228439)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1510,16 +1515,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3.33556533408787, -0.5961874691421648)"
+       "(1.6761093972007404, -1.2548992575995708)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1530,16 +1535,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3.33556533408787, -0.5961874691421648)"
+       "(1.6761093972007404, -1.2548992575995708)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1551,36 +1556,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-0.1559789674367652, 0.3781645657650677)"
+       "(-0.0563439397133928, 1.1014740768548847)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.percentile(a,25),np.percentile(a,75)       # 1사분위"
+    "np.percentile(a,25),np.percentile(a,75)       # 1,3사분위"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.08034941446740777, 0.08034941446740777)"
+       "(0.6559353740677543, 0.6559353740677543)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
